--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>單字測驗</title>
-    <link rel="stylesheet" href="quize.css">
+    <link rel="stylesheet" href="quiz.css">
 </head>
 <body>
     <h1>單字測驗</h1>
@@ -57,7 +57,7 @@
         </div>
     </div>
 
-    <script src="quize.js"></script>
+    <script src="quiz.js"></script>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
