--- a/quiz.html
+++ b/quiz.html
@@ -48,7 +48,10 @@
                 <button class="button" onclick="saveQuizResults()">儲存此次測驗結果</button>
                 <button class="button" onclick="returnToMainMenu()">返回主頁</button>
             </div>
+
         </div>
+        
+            <div id="saveNotification" class="notification">✅ 測驗結果已成功儲存！</div>
 
     </div>
 
