--- a/quiz.html
+++ b/quiz.html
@@ -28,15 +28,20 @@
             <button id="startFilteredQuizBtn" class="button">開始測驗</button>
         </div>
 
-        <!-- 測驗區 -->
         <div id="quizArea" style="display: none;">
             <h2>填寫單字</h2>
             <button id="cancelBtn" class="back-button" onclick="returnToCategorySelection()">取消</button>
             <div id="wordHint"></div>
-            <input type="text" id="wordInput" placeholder="輸入完整單字">
+            
+            <!-- 字母格輸入框 -->
+            <div id="wordInput" class="letter-grid">
+               <!-- 這裡由 JavaScript 動態生成字母格 -->
+            </div>
+
             <div class="button-group">
                 <button id="playAudioCenterBtn" class="button">播放發音</button>
-                <button class="button" onclick="submitAnswer()">提交</button>
+                <button id="submitBtn" class="button" onclick="submitAnswer()">提交</button>
+                <button id="nextBtn" class="button" onclick="goToNextWord()" style="display: none;">下一題</button>
                 <button class="button" onclick="finishQuiz()">完成測驗</button>
             </div>
         </div>
@@ -48,9 +53,7 @@
                 <button class="button" onclick="saveQuizResults()">儲存此次測驗結果</button>
                 <button class="button" onclick="returnToMainMenu()">返回主頁</button>
             </div>
-
         </div>
-
     </div>
 
     <script src="quiz.js"></script>
