--- a/index.html
+++ b/index.html
@@ -70,34 +70,22 @@
             </button>
         </div>
 
-        <!-- 2️⃣ 筆記按鈕 -->
-         <div style="display: flex; align-items: center; justify-content: space-between;">
-                <h3>Note</h3>
-                <div>
-                    <button onclick="clearAllNotes()" id="clearNoteButton" class="note-button">Delete</button>
-                    <button onclick="saveNote()" id="saveNoteButton" class="note-button">Savenote</button>
-                </div>
-            </div>
+<!-- 2️⃣ 筆記按鈕 -->
+<div id="noteContainer">
+    <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 80px;"></textarea>
+    <p id="savedNote"></p>
+</div>
 
-            <div id="noteContainer">
-                <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 80px;"></textarea>
-                <p id="savedNote"></p>
-            </div>
-
-            <!-- 添加匯出與匯入按鈕 -->
-            <div id="storageButtons" style="display: flex; align-items: center; justify-content: space-between; margin-top: 10px;">
-    <h3>Share Note</h3>
-    <div>
-        <button onclick="exportAllData()" id="exportButton" class="note-button">
-            Export
-        </button>
-        <button onclick="importAllData()" id="importButton" class="note-button">
-            Import
-        </button>
+<!-- 添加匯出與匯入按鈕 -->
+<div id="storageButtons" style="display: flex; align-items: center; justify-content: space-between; margin-top: 10px;">
+    <div style="margin-right: -50px;"> <!-- 調整 margin-left 來左移 -->
+        <button onclick="saveNote()" id="saveNoteButton" class="note-button">Savenote</button>
+        <button onclick="exportAllData()" id="exportButton" class="note-button">Export</button>
+        <button onclick="importAllData()" id="importButton" class="note-button">Import</button>
     </div>
 </div>
 
-    </div>
+
 
     <script src="index.js" defer></script>
 </body>
