--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </div>
 <div class="category-container" id="categoryButtons"></div>
 <div class="level-container" id="levelButtons"></div>
+<h2 id="wordListTitle" style="text-align: center; margin-bottom: 10px; display: none;"></h2>
 <div class="container">
     <div id="wordList" class="word-list">
         <button class="button back-button" onclick="backToFirstLayer()">Back</button>
