--- a/sentence.html
+++ b/sentence.html
@@ -1,28 +1,90 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>單字學習系統</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Boyd Sentence</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <!-- 主選單 -->
-    <div id="mainMenu" class="container">
-        <h1>選擇字母</h1>
-        <div class="button-group">
-            <button onclick="showWordsStartingWith('A')">A</button>
-            <!-- 可手動新增其他字母，或用 JS 動態生成 -->
+    <h1>Boyd Sentence</h1>
+
+    <!-- 第一層：搜尋與導航 -->
+    <div id="searchContainer" style="text-align: center; margin-bottom: 15px;">
+        <input type="text" id="searchInput" placeholder="輸入單字搜尋..." oninput="filterSentences()" style="padding: 8px; width: 200px;">
+    </div>
+    <div style="text-align: center; margin-top: 20px;">
+        <button id="startQuizBtn" class="button">進入測驗</button>
+        <button id="returnHomeBtn" class="button">返回首頁</button>
+    </div>
+    <div class="alphabet-container" id="alphabetButtons"></div> <!-- 改為容器 -->
+    <div class="category-container" id="categoryButtons"></div>
+    <div class="level-container" id="levelButtons"></div>
+
+    <!-- 第二層：單字列表 -->
+    <h2 id="wordListTitle" style="text-align: center; margin-bottom: 10px; display: none;"></h2>
+    <div class="container">
+        <div id="wordList" class="word-list">
+            <button class="button back-button" onclick="backToFirstLayer()">Back</button>
+            <div id="wordItems"></div>
+        </div>
+
+        <!-- 第三層：句子列表 -->
+        <div id="sentenceList" class="word-list" style="display: none;">
+            <button class="button back-button" onclick="backToWordList()">Back</button>
+            <div id="sentenceItems"></div>
+        </div>
+
+        <!-- 第四層：句子詳情 -->
+        <div id="sentenceDetails" class="details" style="display: none;">
+            <button class="button" onclick="backToSentenceList()">Back</button>
+            <div id="sentenceHeader"></div>
+            <div id="phoneticContainer"></div>
+            <div id="sentenceContainer"></div>
+            <div id="chineseContainer"></div>
+
+            <!-- 播放控制 -->
+            <div class="audio-controls-wrapper">
+                <div class="audio-controls">
+                    <button class="audio-btn" id="playAudioBtn">
+                        <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/play.svg" alt="Play" width="24" height="24" />
+                    </button>
+                    <button class="audio-btn" onclick="adjustAudioTime(-5)">
+                        <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/rewind.svg" alt="Rewind" width="24" height="24" />
+                    </button>
+                    <button class="audio-btn" id="pauseResumeBtn" onclick="togglePauseAudio(this)">
+                        <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/pause.svg" alt="Pause" width="24" height="24" />
+                    </button>
+                    <button class="audio-btn" onclick="adjustAudioTime(5)">
+                        <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/fast-forward.svg" alt="Fast Forward" width="24" height="24" />
+                    </button>
+                </div>
+            </div>
+
+            <!-- 搜尋框 -->
+            <div id="searchInDetails" style="text-align: center; margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
+                <input type="text" id="searchInputDetails" placeholder="輸入單字搜尋..." oninput="filterSentencesInDetails()" style="font-size: 16px; padding: 5px; width: 200px;">
+                <button id="bButton" class="button">B</button>
+            </div>
+            <div id="searchResultsDetails" style="max-height: 200px; overflow-y: auto; text-align: left;"></div>
+
+            <!-- 筆記區塊 -->
+            <div id="noteContainer">
+                <textarea id="sentenceNote" placeholder="輸入筆記..." style="width: 100%; height: 80px;" oninput="updateCheckbox()"></textarea>
+                <p id="savedNote"></p>
+            </div>
+
+            <!-- 勾選框與匯出、匯入按鈕 -->
+            <div id="storageButtons" style="display: flex; align-items: center; justify-content: space-between; margin-top: 10px;">
+                <div style="display: flex; align-items: center;">
+                    <input type="checkbox" id="noteCheckbox" onclick="handleCheckboxClick()" style="margin-right: 10px;">
+                    <button onclick="saveNote()" id="saveNoteButton" class="note-button">Save Note</button>
+                    <button onclick="exportAllData()" id="exportButton" class="note-button">Export</button>
+                    <button onclick="importAllData()" id="importButton" class="note-button">Import</button>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- 單字列表 -->
-    <div id="wordList" class="container hidden">
-        <h2>單字列表</h2>
-        <div id="wordItems"></div>
-        <button class="back-btn" onclick="returnToMainMenu()">返回主選單</button>
-    </div>
-
-    <script src="script.js"></script>
+    <script src="sentence.js" defer></script>
 </body>
 </html>
