--- a/quiz.html
+++ b/quiz.html
@@ -11,9 +11,10 @@
 
     <!-- 導覽按鈕區 -->
     <div id="mainMenu">
-        <button class="back-button" onclick="goBack()">Home</button>
-        <button class="button" onclick="showQuizCategories()">Q Vocabulary</button>
-        <button class="button" onclick="showSentenceQuizCategories()">Q Sentence</button>
+        <button class="back-button" onclick="goBack()">進入單字頁面</button>
+        <button id="sentencePageBtn" class="button">進入句子頁面</button>
+        <button class="button" onclick="showQuizCategories()">單字測驗</button>
+        <button class="button" onclick="showSentenceQuizCategories()">句子測驗</button>
     </div>
 
     <div class="container">
