--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="quiz.css">
 </head>
 <body>
-    <h1>單字測驗</h1>
+    <h1>測驗區</h1>
 
     <!-- 導覽按鈕區 -->
     <div id="mainMenu">
