--- a/quiz.html
+++ b/quiz.html
@@ -36,9 +36,10 @@
                 <button class="back-button" onclick="returnToMainMenu()">Back</button>
                 <button id="startSentenceQuizBtn" class="button">Start Quiz</button>
             </div>
-            <div class="level-container" id="sentenceLevelButtons"></div>
             <div class="category-container" id="sentenceCategoryButtons"></div>
-            <div id="selectedSentenceCategory"></div>
+            <div class="level-container" id="sentenceLevelButtons"></div>
+            
+
         </div>
 
         <!-- 單字測驗區 -->
@@ -88,6 +89,7 @@
     <!-- JavaScript 檔案 -->
     <script src="quiz.js"></script>
     <script src="q_sentence.js"></script>
+    <!-- 其他腳本保持不變 -->
 
     <script>
     document.addEventListener("DOMContentLoaded", function () {
