剩下Back返回句子測試結果區問題

--- a/quiz.html
+++ b/quiz.html
@@ -86,10 +86,10 @@
             </div>
          </div>
 
-    <!-- JavaScript 檔案 -->
-    <script src="quiz.js"></script>
-    <script src="q_sentence.js"></script>
-    <!-- 其他腳本保持不變 -->
+<!-- JavaScript 檔案 -->
+<script src="q_sentence.js" defer></script>
+<script src="quiz.js" defer></script>
+<!-- 其他腳本保持不變 -->
 
     <script>
     document.addEventListener("DOMContentLoaded", function () {
