--- a/sentence.html
+++ b/sentence.html
@@ -16,7 +16,7 @@
         <button id="startQuizBtn" class="button">進入測驗</button>
         <button id="returnHomeBtn" class="button">返回首頁</button>
     </div>
-    <div class="alphabet-container" id="alphabetButtons"></div> <!-- 改為容器 -->
+    <div class="alphabet-container" id="alphabetButtons"></div>
     <div class="category-container" id="categoryButtons"></div>
     <div class="level-container" id="levelButtons"></div>
 
@@ -63,7 +63,6 @@
             <!-- 搜尋框 -->
             <div id="searchInDetails" style="text-align: center; margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
                 <input type="text" id="searchInputDetails" placeholder="輸入單字搜尋..." oninput="filterSentencesInDetails()" style="font-size: 16px; padding: 5px; width: 200px;">
-                <button id="bButton" class="button">B</button>
             </div>
             <div id="searchResultsDetails" style="max-height: 200px; overflow-y: auto; text-align: left;"></div>
 
