--- a/sentence.html
+++ b/sentence.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boyd Sentence</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="sentence.css">
 </head>
 <body>
     <h1>Boyd Sentence</h1>
@@ -17,7 +17,12 @@
         <button id="returnHomeBtn" class="button">返回首頁</button>
     </div>
     <div class="alphabet-container" id="alphabetButtons"></div>
-    <div class="category-container" id="categoryButtons"></div>
+    <div class="category-container" id="categoryButtons">
+        <!-- 假設這裡動態生成按鈕，需在 sentence.js 中添加 class="category-btn" -->
+        <!-- 例如： -->
+        <!-- <button class="category-btn">分類1</button> -->
+        <!-- <button class="category-btn">分類2</button> -->
+    </div>
     <div class="level-container" id="levelButtons"></div>
 
     <!-- 第二層：單字列表 -->
