sentence.html 搜尋框18px

--- a/sentence.html
+++ b/sentence.html
@@ -10,7 +10,7 @@
 
     <!-- 第一層：搜尋與導航 -->
     <div id="searchContainer" style="text-align: center; margin-bottom: 15px;">
-        <input type="text" id="searchInput" placeholder="輸入單字搜尋..." oninput="filterSentences()" style="padding: 8px; width: 200px;">
+        <input type="text" id="searchInput" placeholder="輸入單字搜尋..." oninput="filterSentences()" style="font-size: 18px; padding: 5px; width: 200px;">
     </div>
     <div style="text-align: center; margin-top: 20px;">
         <button id="startQuizBtn" class="button">進入測驗</button>
@@ -67,7 +67,7 @@
 
             <!-- 搜尋框 -->
             <div id="searchInDetails" style="text-align: center; margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
-                <input type="text" id="searchInputDetails" placeholder="輸入單字搜尋..." oninput="filterSentencesInDetails()" style="font-size: 16px; padding: 5px; width: 200px;">
+                <input type="text" id="searchInputDetails" placeholder="輸入單字搜尋..." oninput="filterSentencesInDetails()" style="font-size: 18px; padding: 5px; width: 200px;">
             </div>
             <div id="searchResultsDetails" style="max-height: 200px; overflow-y: auto; text-align: left;"></div>
 
