--- a/sentence.html
+++ b/sentence.html
@@ -41,7 +41,7 @@
 
         <!-- 第四層：句子詳情 -->
         <div id="sentenceDetails" class="details" style="display: none;">
-            <button class="button" onclick="backToSentenceList()">Back</button>
+            <button class="button" onclick="backToSentenceList(event)">Back</button>
             <div id="sentenceHeader"></div>
             <div id="phoneticContainer"></div>
             <div id="sentenceContainer"></div>
