--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <input type="text" id="searchInput" placeholder="輸入單字搜尋..." oninput="filterWords()" style="padding: 8px; width: 200px;">
 </div>
 <div style="text-align: center; margin-top: 20px;">
-    <button id="startQuizBtn" class="button">進入測驗頁面</button>
-    <button id="sentencePageBtn" class="button">進入句子頁面</button>
+    <button id="wordPageBtn" class="button" style="background-color: #28a745;">單字頁面</button>
+    <button id="wordQuizBtn" class="button">單字測驗</button>
+    <button id="sentencePageBtn" class="button">句子頁面</button>
+    <button id="startQuizBtn" class="button">句子測驗</button>
+
+
 </div>
 <div class="alphabet-container">
     <script>
