單字與句字完成,接著做測驗區

--- a/sentence.html
+++ b/sentence.html
@@ -12,7 +12,7 @@
     <div id="searchContainer" style="text-align: center; margin-bottom: 15px;">
         <input type="text" id="searchInput" placeholder="輸入單字搜尋..." oninput="filterSentences()" style="font-size: 18px; padding: 5px; width: 200px;">
     </div>
-    <div style="text-align: center; margin-top: 20px;">
+    <div class="button-container">
         <button id="returnHomeBtn" class="button">單字頁面</button>
         <button id="wordQuizBtn" class="button">單字測驗</button>
         <button id="sentencePageBtn" class="button" style="background-color: #28a745;">句子頁面</button>
