--- a/quiz.html
+++ b/quiz.html
@@ -21,7 +21,7 @@
         <!-- 單字測驗分類區 -->
         <div id="quizCategories" style="display: none;">
             <div class="button-container">
-                <button class="back-button" onclick="returnToMainMenu()">Back</button>
+                <button class="back-button" onclick="returnToSourcePage()">Back</button>
                 <button id="startFilteredQuizBtn" class="button">Start Quiz</button>
             </div>
             <div class="alphabet-container" id="alphabetButtons"></div>
@@ -33,7 +33,7 @@
         <!-- Q Sentence 測驗分類 -->
         <div id="sentenceQuizCategories" style="display: none;">
             <div class="button-container">
-                <button class="back-button" onclick="returnToMainMenu()">Back</button>
+                <button class="back-button" onclick="returnToSourcePage()">Back</button>
                 <button id="startSentenceQuizBtn" class="button">Start Quiz</button>
             </div>
             <div class="category-container" id="sentenceCategoryButtons"></div>
