先這樣:測驗結果"Back"到首頁先保留

--- a/sentence.html
+++ b/sentence.html
@@ -37,7 +37,7 @@
 
         <!-- 第三層：句子列表 -->
         <div id="sentenceList" class="word-list" style="display: none;">
-            <button class="button back-button" onclick="backToFirstLayer()">Back</button>
+            <button class="button back-button" onclick="backToWordList()">Back</button>
             <div id="sentenceItems"></div>
         </div>
 
